--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "homepage": "https://github.com/mkrell23/NpcGen#readme",
   "dependencies": {
     "autoprefixer": "^10.2.1",
-    "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1"
   }
 }
